# dotenver

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.rst  output  pyproject.toml  tox.ini
.github/workflows/: tests.yml
dotenver/: cli.py  dotenver.py
tests/: test_dotenver.py
