[tool.poetry]
name = "dotenver"
version = "0.7.0"
description = "Automatically generate .env files from .env.example template files"
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]
license = "BSD-3-Clause"

readme = "README.rst"

repository = "https://github.com/jmfederico/dotenver"

keywords = ["dotenv", "template"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.10"
faker = "^1.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
docutils = "^0.14.0"
pygments = "^2.3"
tox = "^3.7"
toml = "^0.10.0"

[tool.poetry.scripts]
dotenver = 'dotenver.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
