[tool.poetry]
name = "dotenver"
version = "1.2.1.dev0"
description = "Automatically generate .env files from .env.example template files"
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]
license = "BSD-3-Clause"

readme = "README.rst"

repository = "https://github.com/jmfederico/dotenver"

keywords = ["dotenv", "template"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.10"
faker = "^1.0"
colorama = "^0.4.1"
pytest = {version = "^5.3.2", optional = true}
docutils = {version = "^0.16", optional = true}
pygments = {version = "^2.5.2", optional = true}
toml = {version = "^0.10.0", optional = true}

[tool.poetry.extras]
testing = ["pytest", "docutils", "pygments", "toml"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dotenver = 'dotenver.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
